cabal-version:      3.0
name:               fo3WikiParse
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             BogdanYarotsky
maintainer:         byarotsky@gmail.com
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    hs-source-dirs:      lib
    exposed-modules:     Parse
    build-depends:       base >=4.7 && <5
                       , tagsoup
    default-language:    GHC2021
    import:              warnings

executable fo3WikiParse
    import:              warnings
    hs-source-dirs:      app
    main-is:             Main.hs
    build-depends:       base
                       , fo3WikiParse
    default-language:    GHC2021

test-suite fo3WikiParseTests
    type:                exitcode-stdio-1.0
    hs-source-dirs:      test
    main-is:             TestSuite.hs
    build-depends:       base
                       , HUnit
                       , fo3WikiParse
    default-language:    GHC2021
    import:              warnings
